--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ESP-01 LED Control v2</title>
 </head>
 <body>
-    <h1>LED Control</h1>
+    <h1>LED Control v2</h1>
     <input type="color" id="colorPicker" value="#ff0000">
     <button onclick="sendColor()">Send Color</button>
 
