--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 
     <script>
         function sendColor() {
-            const color = document.getElementById("colorPicker").value;
-            fetch("http://192.168.4.132/setcolor", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify({ color: color }),
-            })
-            .then(response => response.text())
-            .then(data => {
-                console.log("Response:", data);
-                alert("Color sent: " + color);
-            })
-            .catch(error => {
-                console.error("Error:", error);
-                alert("Failed to send color!");
-            });
-        }
+    let hexColor = document.getElementById('hexColor').value;
+
+    // Ensure the hex color starts with a #
+    if (!hexColor.startsWith('#')) {
+        hexColor = '#' + hexColor;
+    }
+
+    // Send the color code to ESP-01 (using HTTPS)
+    fetch('https://192.168.4.132/setcolor', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ color: hexColor })
+    })
+    .then(response => response.text())
+    .then(data => {
+        console.log('Success:', data);
+    })
+    .catch((error) => {
+        console.error('Error:', error);
+    });
+}
     </script>
 </body>
 </html>
