--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP Color Picker</title>
+  <title>ESP Color Picker v2</title>
 </head>
 <body>
   <h2>Set RGB LED Color</h2>
