--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP Color Picker v2</title>
+  <title>ESP Color Picker</title>
 </head>
 <body>
-  <h2>Set RGB LED Color</h2>
+  <h2>Set RGB LED Color v2</h2>
   <form id="colorForm">
     <label for="color">Enter HEX Color (e.g., FF5733):</label><br>
     <input type="text" id="color" name="color" maxlength="6" placeholder="FFFFFF" required><br><br>
